--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,9 +1,12 @@
-
 <!DOCTYPE html>
 
-<link rel="stylesheet" href="/chat2.css" >
+<link rel="stylesheet" href="/css/chat.css"
 
+<%- include('partials/head')%> 
 
+<%- include('partials/header')%> 
+
+<hr color="#0066cc">
 
 
 
