--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -25,7 +25,9 @@
                 </p>
             </div>
             <div class="item">
-                <img src="/img/iconemural.jpg" alt="View" width="120px" height="120px">
+
+              <a href=http://localhost:3000/mural >
+               <img src="/img/iconemural.jpg" alt="View" width="120px" height="120px"></a>
                 <p>
                   MURAL
                 </p>
@@ -35,8 +37,10 @@
 
         <div class="advantage">
             <div class="item">
+
+              <a href=http://localhost:3000/boletos >
               
-                <img src="/img/iconeboleto.jpg" alt="Shield" width="120px" height="120px">
+                <img src="/img/iconeboleto.jpg" alt="Shield" width="120px" height="120px"></a>
            
                 <p>
                   BOLETOS
