--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,12 +8,12 @@
         <img class="logo" href= "#" src="/img/logo.svg" alt="">
            <nav>
                <ul class = "nav-area">
-                   <li><a href="#">HOME<a></a></li>
-                   <li><a href="#">QUEM SOMOS<a></a></li>
+                   <li><a href=http://localhost:3000>HOME</a></li>
+                   <li><a href="#">QUEM SOMOS</a></li>
                    <li><a href="#">SERVIÇOS<a></a></li>
                    <li><a href="#">CONTATO<a></a></li>
               </ul>
            </nav>
-           <a class="btn-area" href="#">Login &nbsp;<img src="/img/admin-icon.svg" width="17px" height="17px"></a>
+           <a class="btn-area" href=http://localhost:3000/login>Login &nbsp;<img src="/img/admin-icon.svg" width="17px" height="17px"></a>
     </header>
    
