--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
            <nav>
                <ul class = "nav-area">
                    <li><a href=http://localhost:3000>HOME</a></li>
-                   <li><a href="#">QUEM SOMOS</a></li>
+                   <li><a href=http://localhost:3000/quemSomos>QUEM SOMOS</a></li>
                    <li><a href="#">SERVIÇOS<a></a></li>
                    <li><a href="#">CONTATO<a></a></li>
               </ul>
