--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -11,15 +11,19 @@
    
         <div class="advantage">
             <div class="item">
+
+              <a href=http://localhost:3000/perfil >
               
-                <img src="/img/iconeperfil.jpg" alt="Shield" width="120px" height="120px">
+                <img src="/img/iconeperfil.jpg" alt="Shield" width="120px" height="120px"> </a>
            
                 <p>
                   PERFIL
                 </p>
             </div>
             <div class="item">
-                <img src="/img/iconechat.jpg "alt="Admin" width="120px" height="120px">
+
+              <a href=http://localhost:3000/chat >
+                <img src="/img/iconechat.jpg "alt="Admin" width="120px" height="120px"> </a>
                 <p>
                   CHAT
                 </p>
