--- a/views/contato.ejs
+++ b/views/contato.ejs
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ApêGo</title>
-    <link rel="stylesheet" href="/css/mural-de-avisos.css">
+    <title>Contato - ApêGo</title>
+    <link rel="stylesheet" href="/css/contato.css">
     <link rel="shortcut icon" href="/img/favicon.ico"/>
 </head>
 <header>
@@ -21,16 +21,22 @@
     <a class="btn-area" href="#">Login &nbsp;<img src="/img/admin-icon.svg" width="17px" height="17px"></a>
 </header>
 <body>
-    <h1 class= "titulo">CONTATO</h1>
+<h1 class= "titulo">CONTATO</h1>
     
-    <h2>Telefone</h2>
+<div class="lista-contatos">
+    <h3>Telefone</h2>
     <p>11 4002-8922</p>
-
-    <h2>Celular/WhatsApp</h2>
+    <br>
+    <h3>Celular/WhatsApp</h2>
     <p>11 94002-8922</p>
-
-    <h2>E-mail</h2>
+    <br>
+    <h3>E-mail</h2>
     <p></p>contato@apego.com</p>
+    <br>
+
+    <h3>Redes Sociais</h3>
+    <p>@apego</p>
+</div>
 </body>
 <footer>
     <section class="flex-container">
