--- a/views/mural-de-avisos.ejs
+++ b/views/mural-de-avisos.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ApêGo</title>
+    <title>Mural de Avisos - ApêGo</title>ApêGo</title>
     <link rel="stylesheet" href="/css/mural-de-avisos.css">
     <link rel="shortcut icon" href="/img/favicon.ico"/>
 </head>
