--- a/views/mural-de-avisos.ejs
+++ b/views/mural-de-avisos.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mural de Avisos - ApêGo</title>ApêGo</title>
+    <title>Mural de Avisos - ApêGo</title>
     <link rel="stylesheet" href="/css/mural-de-avisos.css">
     <link rel="shortcut icon" href="/img/favicon.ico"/>
 </head>
@@ -52,13 +52,10 @@
 </body>
 <footer>
     <section class="flex-container">
-    <div class="footer-card">
+    <div class="footer-card-apego">
         <p>ApêGo - 2021 - Todos os direitos reservados.</p>
     </div>
-    <div lass="footer-card">
-        <p></p>
-    </div>
-    <div class="footer-card">
+    <div class="footer-icons">
         <img href="https://facebook.com" src="/img/face-icon-white.svg" width="30px" height="30px" hspace="15px">
         <img href="https://instagram.com" src="/img/insta-icon-white.svg" width="30px" height="30px" hspace="15px">
     </div>
