--- a/public/css/contato.css
+++ b/public/css/contato.css
@@ -25,7 +25,6 @@
     align-items: center;
     padding: 30px 70px;
     width: 100%;
-    /* position: fixed; */
   }
   
   .nav-area{
@@ -141,11 +140,16 @@ footer {
     text-align: center;
     background-color: #3566cc;
     width: 100%;
-    padding: 20px;
+    margin: auto;
+    bottom: 0;
     position: relative;
-    top: 0px;
-    left: 0px;
-    bottom: 0px;
-    right: 0px;
+}
+
+.footer-card-apego{
+  padding-top: 20px;
+}
+
+.footer-icons {
+  padding-bottom: 20px;
 }
 
