--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
                    <li><a href=http://localhost:3000>HOME</a></li>
                    <li><a href=http://localhost:3000/quemSomos>QUEM SOMOS</a></li>
                    <li><a href="#">SERVIÇOS<a></a></li>
-                   <li><a href="#">CONTATO<a></a></li>
+                   <li><a href=http://localhost:3000/contato>CONTATO<a></a></li>
               </ul>
            </nav>
            <a class="btn-area" href=http://localhost:3000/login>Login &nbsp;<img src="/img/admin-icon.svg" width="17px" height="17px"></a>
