--- a/views/login.ejs
+++ b/views/login.ejs
@@ -36,10 +36,10 @@
     </form>
     <div class="cadastro">
         <div class="ou">
-        <h2><center>Ou</center></h2>
+        <h2><center>Ou</center></h2>          
         </div>
         <div class="cadastro">
-            <a href="#">Cadastre-se Agora <i class="fas fa-user-check"></i></a>
+            <a href="http://localhost:3000/CriarLogin">Cadastre-se Agora <i class="fas fa-user-check"></i></a>
         </div>
     </div>  
     
