--- a/views/criarLogin.ejs
+++ b/views/criarLogin.ejs
@@ -1,1 +1,47 @@
-xxxx
+
+<!DOCTYPE html>
+<html lang= "pt">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE-edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ApeGo Seu administrador de condomínio</title>
+
+    <link rel="stylesheet" href="/css/criar.css"
+    <link rel="shortcut icon" href="/img/favicon.ico"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+</head>
+
+    <h2>Criar Login</h2>
+    <form action="action">
+        <div class="input-field"></div>
+            <input type="text" name="Nome" id="username" placeholder="Nome Completo">
+            <div class="underline"></div>
+        </div>
+        <div class="input-field"></div>
+            <input type="text" name="email" id="email" placeholder="email">
+            <div class="underline"></div>
+        </div>
+        <div class="input-field"></div>
+            <input type="text" name="endereço" id="endereço" placeholder="endereço">
+            <div class="underline"></div>
+        </div>
+        <div class="input-field"></div>
+            <input type="text" name="endereço" id="telefone" placeholder="telefone">
+            <div class="underline"></div>
+        </div>
+
+        <div class="input-field"></div>
+            <input type="password" name="password" id="password" placeholder="Sua Senha">
+            <div class="underline"></div>
+        </div>
+        <input class="entrar" type="submit" value="Entrar">
+    </form>
+    
+        <div class="cadastro">
+            <a href="http://localhost:3000/CriarLogin">entrar <i class="fas fa-user-check"></i></a>
+        </div>
+    </div>  
+    
