Alterei o nome da página CriarLogin para cadastro, inclusive as rotas

--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -41,7 +41,7 @@
     </form>
     
         <div class="cadastro">
-            <a href="http://localhost:3000/CriarLogin">entrar <i class="fas fa-user-check"></i></a>
+            <a href="http://localhost:3000/cadastro">entrar <i class="fas fa-user-check"></i></a>
         </div>
     </div>  
     
