--- a/views/login.ejs
+++ b/views/login.ejs
@@ -39,7 +39,7 @@
         <h2><center>Ou</center></h2>          
         </div>
         <div class="cadastro">
-            <a href="http://localhost:3000/CriarLogin">Cadastre-se Agora <i class="fas fa-user-check"></i></a>
+            <a href="http://localhost:3000/cadastro">Cadastre-se Agora <i class="fas fa-user-check"></i></a>
         </div>
     </div>  
     
