--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -1,18 +1,8 @@
 
-<!DOCTYPE html>
-<html lang= "pt">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ApeGo Seu administrador de condomínio</title>
+<%- include('partials/head')%> 
+<%- include('partials/header')%> 
+<link rel="stylesheet" href="/css/criar.css">
 
-    <link rel="stylesheet" href="/css/criar.css"
-    <link rel="shortcut icon" href="/img/favicon.ico"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-</head>
 
     <h2>Criar Login</h2>
     <form action="action">
@@ -44,4 +34,4 @@
             <a href="http://localhost:3000/cadastro">entrar <i class="fas fa-user-check"></i></a>
         </div>
     </div>  
-    
+    <%- include('partials/footer')%>
