--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,7 @@
 
 <%-include('partials/head')  %> 
-
-
-
 <%- include('partials/header')%> 
+<link rel="stylesheet" href="/css/style.css">
 
 
   <hr color="#0066cc">
@@ -40,19 +38,4 @@
     </div>
 
 </main>
- <footer>
-     <section class="flex-container">
-    <div class="footer-card">
-        <p>ApeGo - 2021 - Todos os direitos reservados.</p>
-    </div>
-    <div lass="footer-card">
-        <p></p>
-    </div>
-    <div class="footer-card">
-        <img href="https://facebook.com" src="/img/face-icon-white.svg" width="30px" height="30px" hspace="15px">
-        <img href="https://instagram.com" src="/img/insta-icon-white.svg" width="30px" height="30px" hspace="15px">
-    </div>
-    </section>
-</footer>
-</body>
-</html>
+<%- include('partials/footer')%>
