--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,24 +1,8 @@
-<!DOCTYPE html>
-<html lang= "pt">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ApeGo Seu administrador de condomínio</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/login_style.css">
-    <link rel="shortcut icon" href="/img/favicon.ico"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-</head>
-
-
-
-
+<%- include('partials/head')%> 
 <%- include('partials/header')%> 
+<link rel="stylesheet" href="/css/login_style.css">
 
-<hr color="#0066cc">
+
 
 
 <main class="container">
@@ -48,4 +32,3 @@
 
 <%- include('partials/footer')%> 
 
-</html>
