--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -1,15 +1,14 @@
 
 <%-include('partials/head')  %> 
-
-
-
 <%- include('partials/header')%> 
+<link rel="stylesheet" href="/css/menu.css">
 
-<hr color="#0066cc">
+
 
     <main>
    
         <div class="advantage">
+          
             <div class="item">
 
               <a href=http://localhost:3000/perfil >
@@ -20,6 +19,8 @@
                   PERFIL
                 </p>
             </div>
+
+            <!--
             <div class="item">
 
               <a href=http://localhost:3000/chat >
@@ -28,6 +29,7 @@
                   CHAT
                 </p>
             </div>
+          -->
             <div class="item">
 
               <a href=http://localhost:3000/mural >
@@ -50,7 +52,8 @@
                   BOLETOS
                 </p>
             </div>
-            <div class="item">
+            <!--
+                          <div class="item">
                 <img src="/img/iconereservas.jpg" alt="Admin" width="120px" height="120px">
                 <p>
                   RESERVAS
@@ -64,21 +67,8 @@
             </div>
     
         </div>
+      -->
+      
     
     </main>
-  <footer>
-    <section class="flex-container">
-   <div class="footer-card">
-       <p>ApeGo - 2021 - Todos os direitos reservados.</p>
-   </div>
-   <div lass="footer-card">
-       <p></p>
-   </div>
-   <div class="footer-card">
-       <img href="https://facebook.com" src="/img/face-icon-white.svg" width="30px" height="30px" hspace="15px">
-       <img href="https://instagram.com" src="/img/insta-icon-white.svg" width="30px" height="30px" hspace="15px">
-   </div>
-   </section>
-</footer> 
-</body>
-</html>
+    <%- include('partials/footer')%>
