--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,6 @@
+ 
+ <link rel="stylesheet" href="/css/footer.css">
+ </body>
  <footer>
     <section class="flex-container">
    <div class="footer-card">
@@ -16,4 +19,6 @@
    </div>
    </section>
 </footer> 
+
+</html>
 
