--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,19 +1,16 @@
 
-   <body>
-   <header>
-        <input type="checkbox" id="check">
-        <label for="check" class="checkbtn">
-         <i class="fas fa-bars"></i>
-        </label>
-        <img class="logo" href= "#" src="/img/logo.svg" alt="">
-           <nav>
-               <ul class = "nav-area">
-                   <li><a href=http://localhost:3000>HOME</a></li>
-                   <li><a href=http://localhost:3000/quemSomos>QUEM SOMOS</a></li>
-                   <li><a href="#">SERVIÇOS<a></a></li>
-                   <li><a href=http://localhost:3000/contato>CONTATO<a></a></li>
-              </ul>
-           </nav>
-           <a class="btn-area" href=http://localhost:3000/login>Login &nbsp;<img src="/img/admin-icon.svg" width="17px" height="17px"></a>
-    </header>
-   
+
+       <header>
+           <a href="http://localhost:3000 "><img src ="/img/logo.svg" class="logo"> </a>
+           <ul>
+               <li><a href="http://localhost:3000 ">HOME</a></li>
+               <li><a href="http://localhost:3000/menu">MENU</a></li>
+               <li><a href="http://localhost:3000/QuemSomos ">QUEM SOMOS</a></li>
+               <li><a href="http://localhost:3000/login">LOGIN</a></li>
+               <li><a href="http://localhost:3000/cadastro">CADASTRAR</a></li>
+               <li><a href="http://localhost:3000/contato">CONTATO</a></li>
+           </ul>
+       </header> 
+       <link rel="stylesheet" href="/css/header2.css">
+
+       
