--- a/views/perfil.ejs
+++ b/views/perfil.ejs
@@ -1,13 +1,10 @@
-<html>
+
     <%- include('partials/head')%> 
 
     <%- include('partials/header')%> 
 
 
 
+    <%- include('partials/footer')%>
 
 
-
-
-
-</html>
