--- a/views/quemSomos.ejs
+++ b/views/quemSomos.ejs
@@ -1,11 +1,8 @@
-<%-include('partials/head')  %> 
-
-<link rel="stylesheet" href="./css/quemSomos.css">
-
+<%- include('partials/head')%> 
 <%- include('partials/header')%> 
+<link rel="stylesheet" href="/css/quemSomos.css">
 
-
-  <hr color="#0066cc">
+    <body>
 
   <main>
       <h1>  QUEM SOMOS  </h1>
@@ -66,9 +63,8 @@
   </section>
 
   </main>
-
   
+  <%- include('partials/footer')%> 
+ 
 
-<%- include('partials/footer')%> 
 
-</html>
