--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -32,7 +32,7 @@
           -->
             <div class="item">
 
-              <a href=http://localhost:3000/mural >
+              <a href=http://localhost:3000/mural-de-avisos>
                <img src="/img/iconemural.jpg" alt="View" width="120px" height="120px"></a>
                 <p>
                   MURAL
