--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -2,7 +2,7 @@
 
 
        <header>
-           <a href="http://localhost:3000 "><img src ="/img/logo.svg" class="logo"> </a>
+           <a href="http://localhost:3000 "><img src="/img/logo.svg" class="logo"/> </a>
            <ul>
                <li><a href="http://localhost:3000 ">HOME</a></li>
                <li><a href="http://localhost:3000/menu">MENU</a></li>
