--- a/src/views/cadastro.ejs
+++ b/src/views/cadastro.ejs
@@ -6,7 +6,7 @@
 <body>
 <h2 class="titulo">CADASTRO</h2>
 
-<form action="action">
+<form action="/cadastro" method="POST">
         
         <div class="input-field"></div>
             <input type="text" name="Nome" id="username" placeholder="Nome Completo">
