--- a/src/views/cadastro.ejs
+++ b/src/views/cadastro.ejs
@@ -31,7 +31,7 @@
             <div class="underline"></div>
         </div>
 
-        <button class="botao" type="submit" onsubmit="">Cadastrar</button>
+        <button class="botao" type="submit" onsubmit="">CADASTRAR</button>
 
     </form>
     
