arrumei a rota do mural na página quem somos

--- a/src/views/QuemSomos.ejs
+++ b/src/views/QuemSomos.ejs
@@ -30,10 +30,10 @@
     </div>
     <div class="item">
 
-      <a href=http://localhost:3000/mural >
+      <a href=http://localhost:3000/mural-de-avisos >
        <img src="/img/iconemural.jpg" alt="View" width="120px" height="120px"></a>
         <p>
-          MURAL
+          MURAL DE AVISOS
         </p>
     </div>
 
