--- a/src/views/menu.ejs
+++ b/src/views/menu.ejs
@@ -58,8 +58,10 @@
                 <p>
                   RESERVAS
                 </p>
-            </div>
+            </div> -->
             <div class="item">
+
+              <a href=http://localhost:3000/contas ></a>
                 <img src="/img/iconecontas.jpg" alt="View" width="120px" height="120px">
                 <p>
                   CONTAS
@@ -67,7 +69,7 @@
             </div>
     
         </div>
-      -->
+      
       
     
     </main>
