--- a/src/views/cadastro.ejs
+++ b/src/views/cadastro.ejs
@@ -9,7 +9,7 @@
 <form action="/cadastro" method="POST">
         
         <div class="input-field"></div>
-            <input type="text" name="Nome" id="username" placeholder="Nome Completo">
+            <input type="text" name="name" id="name" placeholder="Nome Completo">
             <div class="underline"></div>
         </div>
        
@@ -17,21 +17,23 @@
             <input type="text" name="email" id="email" placeholder="email">
             <div class="underline"></div>
         </div>
+       
         <div class="input-field"></div>
-            <input type="text" name="endereço" id="endereço" placeholder="endereço">
-            <div class="underline"></div>
-        </div>
-        <div class="input-field"></div>
-            <input type="text" name="endereço" id="telefone" placeholder="telefone">
+            <input type="text" name="condominio" id="condominio" placeholder="condominio">
             <div class="underline"></div>
         </div>
 
         <div class="input-field"></div>
-            <input type="password" name="password" id="password" placeholder="Sua Senha">
+        <input type="text" name="unidade" id="unidade" placeholder="unidade">
+        <div class="underline"></div>
+    </div>
+
+        <div class="input-field"></div>
+            <input type="password" name="senha" id="senha" placeholder="Sua Senha">
             <div class="underline"></div>
         </div>
 
-        <button class="botao" type="submit" onsubmit="">CADASTRAR</button>
+        <button class="botao" type="submit" >CADASTRAR</button>
 
     </form>
     
