--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   
   }
 
 .titulo {
@@ -14,8 +16,8 @@ main{
     border: 0;
     padding: 0;
     box-sizing: border-box;
-    /* min-height: 100vh;
-    min-width: 100vw; */
+    min-height: 100vh;
+    min-width: 100vw; 
     display: flex;
     align-items: center;
     justify-content: center;
@@ -39,25 +41,12 @@ form{
     margin-bottom: 30px;
 }
 
-input#username {
+input#name {
     border-color: #0066cc;
     border-radius: 4px;
     padding-top: 5px;
     padding-left: 5px;
     margin-top: 40px;
-    cursor: text;
-    width: 300px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-input#password {
-    border-color: #0066cc;
-    border-radius: 4px;
-    padding-top: 5px;
-    padding-left: 5px;
-    margin-top: 10px;
-    background-color: white;
     cursor: text;
     width: 300px;
     margin-left: auto;
@@ -70,34 +59,44 @@ input#email {
     padding-top: 5px;
     padding-left: 5px;
     margin-top: 10px;
-    background-color: white;
     cursor: text;
     width: 300px;
     margin-left: auto;
     margin-right: auto;
 }
 
-input#endereço {
+input#condominio {
     border-color: #0066cc;
     border-radius: 4px;
     padding-top: 5px;
     padding-left: 5px;
     margin-top: 10px;
-    background-color: white;
     cursor: text;
     width: 300px;
     margin-left: auto;
     margin-right: auto;
 }
 
-input#telefone {
+input#unidade{
     border-color: #0066cc;
     border-radius: 4px;
     padding-top: 5px;
     padding-left: 5px;
     margin-top: 10px;
-    background-color: white;
+   
     cursor: text;
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+input#senha{
+    border-color: #0066cc;
+    border-radius: 4px;
+    padding-top: 5px;
+    padding-left: 5px;
+    margin-top: 10px;
+   cursor: text;
     width: 300px;
     margin-left: auto;
     margin-right: auto;
@@ -107,7 +106,7 @@ form input{
     margin: 0.4rem;
     padding: 0.4rem;
     border-radius: 4px;
-    color: white;
+    
     
     cursor: pointer;
 }
