--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
+
+
 *{
     margin: 0;
     padding: 0;
