--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap')
+
 
 *{
   margin: 0;
@@ -6,7 +8,6 @@
   box-sizing: border-box;
 }
 body {
-  font-family: lato light;
   /*font-weight: 600;*/
   font-size: 16px;
 }
