--- a/src/views/perfil.ejs
+++ b/src/views/perfil.ejs
@@ -3,6 +3,12 @@
 
     <%- include('partials/header')%> 
 
+    <div>
+        <img src="/img/iconeperfil.jpg alt="" width="150px" height="150px">
+        
+        <h1>PERFIL </h1>
+      </div>
+
 
 
     <%- include('partials/footer')%>
