--- a/src/views/menu.ejs
+++ b/src/views/menu.ejs
@@ -11,7 +11,7 @@
           
             <div class="item">
 
-              <a href=http://localhost:3000/perfil >
+              <a href="/perfil" >
               
                 <img src="/img/iconeperfil.jpg" alt="Shield" width="120px" height="120px"> </a>
            
@@ -32,7 +32,7 @@
           -->
             <div class="item">
 
-              <a href=http://localhost:3000/mural-de-avisos>
+              <a href=/mural-de-avisos>
                <img src="/img/iconemural.jpg" alt="View" width="120px" height="120px"></a>
                 <p>
                   MURAL
@@ -44,7 +44,7 @@
         <div class="advantage">
             <div class="item">
 
-              <a href=http://localhost:3000/boletos >
+              <a href="/boletos" >
               
                 <img src="/img/iconeboleto.jpg" alt="Shield" width="120px" height="120px"></a>
            
@@ -61,8 +61,8 @@
             </div> -->
             <div class="item">
 
-              <a href=http://localhost:3000/contas ></a>
-                <img src="/img/iconecontas.jpg" alt="View" width="120px" height="120px">
+              <a href="contas" >
+                <img src="/img/iconecontas.jpg" alt="View" width="120px" height="120px"></a>
                 <p>
                   CONTAS
                 </p>
