--- a/public/css/perfil.css
+++ b/public/css/perfil.css
@@ -26,12 +26,13 @@ align-items: center;
 justify-content: center;
 border: 2px solid  #0066cc;
 flex-direction: column;
-height: 700px;
-width: 700px ;
+height: 500px;
+width: 500px ;
 display: flex;
 padding: 50px;
-margin-left:580px;
+margin-left:500px;
 box-sizing: border-box;
+margin-bottom: 20px ;
 
 }
 
@@ -39,7 +40,7 @@ box-sizing: border-box;
  
    
    border :2px solid #0066cc;
-   width: 600px;
+   width: 400px;
    height: 100px ;
    margin: 20PX;
    border-radius: 20PX;
@@ -48,7 +49,7 @@ box-sizing: border-box;
 .email{
     
     border :2px solid #0066cc;
-    width: 600px;
+    width: 400px;
     height: 100px ;
     margin: 20PX;
     border-radius: 20PX;
@@ -57,7 +58,7 @@ box-sizing: border-box;
 .condominio{
      
     border :2px solid #0066cc;
-    width: 600px;
+    width: 400px;
     height: 100px ;
     margin: 20PX;
     border-radius: 20PX;
@@ -66,7 +67,7 @@ box-sizing: border-box;
 .unidade{
    
     border :2px solid #0066cc;
-    width: 600px;
+    width: 400px;
     height: 100px ;
     margin: 20PX;
     border-radius: 20PX;
