--- a/src/views/perfil.ejs
+++ b/src/views/perfil.ejs
@@ -2,13 +2,48 @@
     <%- include('partials/head')%> 
 
     <%- include('partials/header')%> 
+    <link rel="stylesheet" href="/css/perfil.css">
 
     <div>
-        <img src="/img/iconeperfil.jpg alt="" width="150px" height="150px">
-        
+        <img src="/img/iconeperfil.jpg" width="150px" height="150px">
+      
         <h1>PERFIL </h1>
+      
       </div>
-
+      
+      <div class="container ">
+        <div class="nome">
+      
+          <h3>Nome</h3>
+          <P> Karina </P>
+      
+          <br>
+      
+        </div>
+        <div class="email">
+      
+          <h3>EMAIL</h3>
+          <P>teste@gmail.com</P>
+      
+          <br>
+        </div>
+      
+        <div class="condominio">
+      
+          <h3>CONDOMINIO</h3>
+          <p> teste</p>
+      
+          <br>
+        </div>
+      
+        <div class="unidade">
+          <h3>UNIDADE</h3>
+          <p>25</p>
+          <br>
+        </div>
+      </div>
+      
+      
 
 
     <%- include('partials/footer')%>
