atualizei a fonte das páginas

--- a/src/views/QuemSomos.ejs
+++ b/src/views/QuemSomos.ejs
@@ -8,7 +8,7 @@
       <h1>  QUEM SOMOS  </h1>
 
 
-      <P>Lorem Ipsum is simply dummy text of the printing and typesetting</P>
+      <P>O ApeGo nasceu em 2021 com o propósito de ajudar moradores de condomínio a ficarem por dentro das novidades e mudanças que acontecem na comunidade!</P>
 
 
       <h1>SERVIÇOS </h1>
