--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,14 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: lato light;
-
-  }
-
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Lato', sans-serif;
+}
     
   footer{
   
@@ -16,11 +13,9 @@
     color: white;
     padding: 30px;
     display: flex;
-
     justify-content: end;
-
-
 }
+
 .footer-card{
     cursor: pointer;
     padding: 10px;
