--- a/public/css/perfil.css
+++ b/public/css/perfil.css
@@ -1,9 +1,12 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 
 *{
-    font-family: 'Lato', sans-serif;
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+   font-family: 'Lato', sans-serif;
 }
+
 h1{
          
     color: #0066cc;
